@@ -9,6 +9,7 @@ import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
+import school.sptech.neosspringjava.api.dtos.establishmentDTO.EstablishmentRequest;
 import school.sptech.neosspringjava.api.dtos.establishmentDTO.EstablishmentRespose;
 import school.sptech.neosspringjava.domain.model.establishment.Establishment;
 import school.sptech.neosspringjava.domain.model.filter.Filter;
@@ -17,37 +18,15 @@ import school.sptech.neosspringjava.domain.model.service.Service;
 @Component
 public class EstablishmentMapper {
 
-    public static EstablishmentRespose toEstablishmentResponse(Establishment establishment) {
-        if (establishment == null) return null;
+    public EstablishmentRespose toEstablishmentResponse(Establishment establishment) {
+        return new EstablishmentRespose(
+            establishment.getId(),
+            establishment.getName(),
+            establishment.getCompany(),
+            establishment.getImgUrl(),
+            establishment.getLocal() 
+        );
 
-        EstablishmentRespose establishmentRespose = new EstablishmentRespose();
-
-        establishmentRespose.setId(establishment.getId());
-        establishmentRespose.setName(establishment.getName());
-        establishmentRespose.setStartShift(establishment.getStartShift());
-        establishmentRespose.setEndShift(establishment.getEndShift());
-        establishmentRespose.setAssessment(establishment.getAssessment());
-        establishmentRespose.setLocal(establishment.getLocal());
-        establishmentRespose.setDescription(establishment.getDescription());
-
-        establishmentRespose.setServices(toServiceDto(establishment.getServices()));
-        establishmentRespose.setFilters(toFilterDto(establishment.getFilters()));
-
-        return establishmentRespose;
-    }
-
-    private static List<EstablishmentRespose.FilterDto> toFilterDto(final List<Filter> entities) {
-        if (entities == null) {
-            return Collections.emptyList();
-        }
-
-        return entities.stream().map(f -> {
-            final EstablishmentRespose.FilterDto dto = new EstablishmentRespose.FilterDto();
-            dto.setId(f.getId());
-            dto.setPrice(f.getPrice());
-            dto.setService(f.getService());
-            return dto;
-        }).toList();
     }
 
     private static List<EstablishmentRespose.ServiceDto> toServiceDto(final List<Service> entities) {
@@ -55,16 +34,19 @@ public class EstablishmentMapper {
             return Collections.emptyList();
         }
 
-        return entities.stream().map(s -> {
-            final EstablishmentRespose.ServiceDto dto = new EstablishmentRespose.ServiceDto();
-            dto.setId(s.getId());
-            dto.setSpecification(s.getSpecification());
-            dto.setServiceType(s.getServiceType());
-            return dto;
-        }).toList();
+
+
+    public List<EstablishmentRespose> toEstablishmentResponseList(List<Establishment> establishments) {
+        return establishments.stream().map(this::toEstablishmentResponse).collect(Collectors.toList());
     }
 
-    public static List<EstablishmentRespose> toEstablishmentResponse(List<Establishment> establishment) {
-        return establishment.stream().map(EstablishmentMapper::toEstablishmentResponse).collect(Collectors.toList());
+    public Establishment toEstablishment(EstablishmentRespose establishmentRespose) {
+        return Establishment.builder()
+            .id(establishmentRespose.id())
+            .name(establishmentRespose.name())
+            .company(establishmentRespose.company())
+            .imgUrl(establishmentRespose.imgUrl())
+            .local(establishmentRespose.local())
+            .build();
     }
 }
